parse mess