@@ -1,24 +1,10 @@
 #!/bin/sh
-#
-# Use this script to run your program LOCALLY.
-#
-# Note: Changing this script WILL NOT affect how CodeCrafters runs your program.
-#
-# Learn more: https://codecrafters.io/program-interface
+set -e
 
-set -e # Exit early if any commands fail
+cd "$CODECRAFTERS_REPOSITORY_DIR"
 
-# Copied from .codecrafters/compile.sh
-#
-# - Edit this to change how your program compiles locally
-# - Edit .codecrafters/compile.sh to change how your program compiles remotely
-(
-  cd "$(dirname "$0")" # Ensure compile steps are run within the repository directory
-  mvn -q -B package -Ddir=/tmp/codecrafters-build-kafka-java
-)
+echo "Building project..."
+#mvn package   # ❗ bỏ -q để thấy lỗi
 
-# Copied from .codecrafters/run.sh
-#
-# - Edit this to change how your program runs locally
-# - Edit .codecrafters/run.sh to change how your program runs remotely
-exec java --enable-preview -jar /tmp/codecrafters-build-kafka-java/codecrafters-kafka.jar "$@"
+echo "Running server..."
+exec java -jar target/codecrafters-kafka.jar "$@"
